--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
     {%if pagination %}
         <div class="pagination">
-            {{ pagination_widget(pagination, '.index') }}
+            {{ pagination_widget(pagination, 'index.index', c_id=category_id, paeg_size=20) }}
         </div>
     {% endif %}
 </div>
